--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
-    "react-router": "^3.0.3"
+    "react-router": "^3.0.3",
+    "throttle-debounce": "^1.0.1"
   }
 }
